@@ -1,0 +1,21 @@
+layer at (0,0) size 785x844
+  RenderView at (0,0) size 785x600
+layer at (0,0) size 785x844
+  RenderBlock {HTML} at (0,0) size 785x844
+    RenderBody {BODY} at (8,8) size 769x828
+      RenderBlock {P} at (0,0) size 769x18
+        RenderText {#text} at (0,0) size 283x18
+          text run at (0,0) width 283: "150% zoom, with width and height attributes"
+      RenderBlock (anonymous) at (0,34) size 769x372
+        RenderText {#text} at (0,354) size 4x18
+          text run at (0,354) width 4: " "
+        RenderVideo {VIDEO} at (4,0) size 488x368 [border: (4px solid #FF0000)]
+        RenderBR {BR} at (492,368) size 0x0
+      RenderBlock {P} at (0,422) size 769x18
+        RenderText {#text} at (0,0) size 303x18
+          text run at (0,0) width 303: "150% zoom, without width and height attributes"
+      RenderBlock (anonymous) at (0,456) size 769x372
+        RenderText {#text} at (0,354) size 4x18
+          text run at (0,354) width 4: " "
+        RenderVideo {VIDEO} at (4,0) size 488x368 [border: (4px solid #FF0000)]
+        RenderBR {BR} at (492,368) size 0x0
