@@ -1,3 +1,15 @@
+2009-01-02  Eric Carlson  <eric.carlson@apple.com>
+
+        Reviewed by Darin Adler
+
+        https://bugs.webkit.org/show_bug.cgi?id=23066 & <rdar://problem/6028417> 
+        Full Page Zoom: a <video> element that doesn't include width/height attribute does not scale
+        
+        Add test for <video> zoom with and without width/height attributes
+
+        * media/video-zoom.html: Added.
+        * platform/mac/media/video-zoom-expected.txt: Added.
+
 2009-01-02  Simon Fraser  <simon.fraser@apple.com>
 
         Reviewed by Darin Adler
